Fix Copy Link to Highlight button being blue on iOS

--- a/src/css/_TextSelection.scss
+++ b/src/css/_TextSelection.scss
@@ -176,6 +176,7 @@
   align-items: center;
   border-radius: 20px;
   font-family: inherit;
+  color: inherit;
   border: 0;
   transition: background-color 0.2s, border-radius 0.2s;
   cursor: pointer;
